# lioshi-gtk-theme

./: AUTHORS  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  _colors.scss  _common.scss  config.status  configure  configure.ac  gtk-contained-dark.css  gtk-dark.css  install-gtk-theme.sh  lioshi-gtk-theme.doap  lioshi-gtk-theme.spec  meson.build  org.snwh.lioshi.theme.desktop
.github/: ISSUE_TEMPLATE.md
.sass-cache/e1c301dd66b3877bc9b3a2b426e569563d0164c1/: _colors-public.scssc  _colors.scssc  _common.scssc  _drawing.scssc  gtk-contained-dark.scssc  gtk-contained.scssc
Lioshi/: README.md  gtk-contained.css  gtk.css  index.theme
Lioshi/gnome-shell/: gnome-classic.css  gnome-shell.css
Lioshi/gtk-2.0/: gtkrc
Lioshi/gtk-3.0/: apps.css  granite-widgets.css  gtk-common.css  gtk-dark.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css
Lioshi/gtk-3.16/: _colors.scss  _common.scss  gtk-dark.css  gtk.css
Lioshi/gtk-3.18/: _colors.scss  gtk-dark.css  gtk.css  gtk.scss
Lioshi/gtk-3.20/: _colors.scss  _common.scss  gtk-dark.css  gtk-dark.scss  gtk.css
Lioshi/metacity-1/: metacity-theme.xml
Lioshi/plank/: dock.theme
Lioshi/xfce-notify-4.0/: gtkrc
Lioshi/xfwm4/: bottom-active.xpm  themerc
Paper/gtk-3.16/: gtk-dark.css  gtk.css
Paper/gtk-3.18/: _colors.scss  gtk-dark.css  gtk.css
Paper/gtk-3.20/: gtk-dark.css  gtk.css
autom4te.cache/: output.1  requests  traces.1
src/: render-gnome-shell-assets.py  render-gtk3-assets-hidpi.py  render-gtk3-assets.py  render-wm-assets-hidpi.py  render-wm-assets.py
(+107 files in other folders)
